--- a/style.css
+++ b/style.css
@@ -80,7 +80,8 @@ body {
 .button:hover {
   cursor: pointer;
   transform: scale(1.1);
-  background-color: lightblue;
+  background-color: darkblue;
+  color: white;
   box-shadow: 0px 0px 10px white;
 }
 
