--- a/style.css
+++ b/style.css
@@ -51,14 +51,19 @@ body {
   box-shadow: 0px 0px 10px 5px white;
 }
 
-#result {
+.result{
   color: yellow;
   font-size: 30px;
 }
 
+.result-alert{
+  color: red;
+  font-weight: bold;
+}
 .result-reset {
   visibility: hidden;
 }
+
 
 .buttonContainer {
   display: flex;
